@@ -11,6 +11,7 @@ v 8.5.1
   - Show Crowd login tab when sign in is disabled and Crowd is enabled (Peter Hudec)
   - Restrict permissions on public/uploads
   - Add when the Builds & Runners API changes got introduced
+  - Re-add the newrelic_rpm gem which was removed without any deprecation or warning (Stan Hu)
   - Update sentry-raven gem to 0.15.6
 
 v 8.5.0
